crates/compiler/src/tests/e2e/good/0591_tuple_component_name_collision/main.gom
struct A_B {
    value: int32,
}

struct C {
    value: int32,
}

struct A {
    value: int32,
}

struct B_C {
    value: int32,
}

fn main() -> unit {
    let one: (A_B, C) = (A_B { value: 1i32 }, C { value: 2i32 });
    let two: (A, B_C) = (A { value: 3i32 }, B_C { value: 4i32 });
    println(one.0.value);
    println(two.0.value);
}
