crates/compiler/src/tests/e2e/bad/0016_recursive_struct/main.gom
struct Tree {
  value: int32,
  left: Tree,
  right: Tree,
}

fn main() -> unit {
  ()
}
